# aidlink

./: .gitignore  BUGS.md  README.md
app/: .env.example  audit-log.jsonl  audit-viewer.html  package.json  tsconfig.json
app/mock-payout/: server.ts
app/src/: account-status.ts  auth-gate.ts  authorize-egress.ts  check-balance.ts  explore-contract-lifecycle.ts  explore-cross-tenant-authz.ts  explore-field-write-test.ts  explore-fund-second-did.ts  explore-orgdata-audit.ts  explore-otp-selfadmit.ts  explore-profile-fields.ts  explore-second-tenant.ts  generate-audit-viewer.ts  invoke-eligibility.ts  invoke.ts  otp-request.ts  otp-verify.ts  phase2-cross-tenant.ts  phase2-delegation.ts  provision.ts
app/src/lib/: agents.ts  audit.ts  client.ts  delegation.ts  orchestration.ts
app/tests/: audit.local.test.ts  phase1.integration.test.ts  phase2-cross-tenant.mocked.test.ts  phase2-delegation.local.test.ts
contract/: Cargo.toml
contract/src/: eligibility.rs  lib.rs  payout.rs  probe.rs
contract/wit/: world.wit
docs/: DEMO_DRAFT.md
